syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message DateTimeOffset {
}
message Energiemenge {
   string LokationsId = 4; // default value could not be applied: |null|
   Lokationstyp LokationsTyp = 5;
   repeated Verbrauch Energieverbrauch = 6;
}
enum Lokationstyp {
   MaLo = 0;
   MeLo = 1;
}
enum Mengeneinheit {
   ZERO = 0; // proto3 requires a zero value as the first item (it can be named anything)
   WH = 2;
   KW = 3;
   ANZAHL = 7;
   KUBIKMETER = 11;
   STUNDE = 13;
   TAG = 17;
   MONAT = 19;
   VAR = 23;
   VARH = 29;
   JAHR = 228;
   KWH = 2000;
   MW = 3000;
   KVAR = 23000;
   KVARH = 29000;
   MWH = 2000000;
}
message Verbrauch {
   DateTimeOffset Startdatum = 3;
   DateTimeOffset Enddatum = 4;
   Wertermittlungsverfahren Wertermittlungsverfahren = 5;
   string Obiskennzahl = 6;
   .bcl.Decimal Wert = 7;
   Mengeneinheit Einheit = 8;
   Verbrauchsmengetyp Type = 9;
}
enum Verbrauchsmengetyp {
   ARBEITLEISTUNGTAGESPARAMETERABHMALO = 0;
   VERANSCHLAGTEJAHRESMENGE = 1;
   TUMKUNDENWERT = 2;
}
enum Wertermittlungsverfahren {
   PROGNOSE = 0;
   MESSUNG = 1;
}
