syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

enum AbgabeArt {
   KAS = 0;
   SA = 1;
   SAS = 2;
   TA = 3;
   TAS = 4;
   TK = 5;
   TKS = 6;
   TS = 7;
   TSS = 8;
}
message Adresse {
   string Postleitzahl = 3;
   string Ort = 4;
   string Strasse = 5;
   string Hausnummer = 6;
   string Postfach = 7;
   string Adresszusatz = 8;
   string CoErgaenzung = 9;
   Landescode Landescode = 10;
}
enum Anrede {
   HERR = 0;
   FRAU = 1;
   EHELEUTE = 2;
   FIRMA = 3;
   INDIVIDUELL = 4;
   DR = 5;
}
enum Energierichtung {
   AUSSP = 0;
   EINSP = 1;
}
enum Fernschaltung {
   VORHANDEN = 0;
   NICHT_VORHANDEN = 1;
}
message Geschaeftspartner {
   Anrede Anrede = 4;
   string Name1 = 6;
   string Name2 = 7;
   string Name3 = 8;
   bool Gewerbekennzeichnung = 9;
   string Hrnummer = 10;
   string Amtsgericht = 11;
   repeated Kontaktart Kontaktweg = 12 [packed = false];
   string UmsatzsteuerId = 13;
   string GlaeubigerId = 14;
   string EMailAdresse = 15;
   string Website = 16;
   repeated Geschaeftspartnerrolle Geschaeftspartnerrolle = 17 [packed = false];
   Adresse Partneradresse = 18;
   string Title = 1001;
}
enum Geschaeftspartnerrolle {
   LIEFERANT = 0;
   DIENSTLEISTER = 1;
   KUNDE = 2;
   INTERESSENT = 3;
   MARKTPARTNER = 4;
}
enum Kontaktart {
   ANSCHREIBEN = 0;
   TELEFONAT = 1;
   FAX = 2;
   E_MAIL = 3;
   SMS = 4;
}
message Konzessionsabgabe {
   AbgabeArt Satz = 3;
   .bcl.Decimal Kosten = 4;
   string Kategorie = 5;
}
enum Landescode {
   AC = 0;
   AD = 1;
   AE = 2;
   AF = 3;
   AG = 4;
   AI = 5;
   AL = 6;
   AM = 7;
   AN = 8;
   AO = 9;
   AQ = 10;
   AR = 11;
   AS = 12;
   AT = 13;
   AU = 14;
   AW = 15;
   AX = 16;
   AZ = 17;
   BA = 18;
   BB = 19;
   BD = 20;
   BE = 21;
   BF = 22;
   BG = 23;
   BH = 24;
   BI = 25;
   BJ = 26;
   BL = 27;
   BM = 28;
   BN = 29;
   BO = 30;
   BQ = 31;
   BR = 32;
   BS = 33;
   BT = 34;
   BU = 35;
   BV = 36;
   BW = 37;
   BY = 38;
   BZ = 39;
   CA = 40;
   CC = 41;
   CD = 42;
   CF = 43;
   CG = 44;
   CH = 45;
   CI = 46;
   CK = 47;
   CL = 48;
   CM = 49;
   CN = 50;
   CO = 51;
   CP = 52;
   CR = 53;
   CS = 54;
   CU = 55;
   CV = 56;
   CW = 57;
   CX = 58;
   CY = 59;
   CZ = 60;
   DE = 61;
   DG = 62;
   DJ = 63;
   DK = 64;
   DM = 65;
   DO = 66;
   DZ = 67;
   EA = 68;
   EC = 69;
   EE = 70;
   EG = 71;
   EH = 72;
   ER = 73;
   ES = 74;
   ET = 75;
   EU = 76;
   FI = 77;
   FJ = 78;
   FK = 79;
   FM = 80;
   FO = 81;
   FR = 82;
   FX = 83;
   GA = 84;
   GB = 85;
   GD = 86;
   GE = 87;
   GF = 88;
   GG = 89;
   GH = 90;
   GI = 91;
   GL = 92;
   GM = 93;
   GN = 94;
   GP = 95;
   GQ = 96;
   GR = 97;
   GS = 98;
   GT = 99;
   GU = 100;
   GW = 101;
   GY = 102;
   HK = 103;
   HM = 104;
   HN = 105;
   HR = 106;
   HT = 107;
   HU = 108;
   IC = 109;
   ID = 110;
   IE = 111;
   IL = 112;
   IM = 113;
   IN = 114;
   IO = 115;
   IQ = 116;
   IR = 117;
   IS = 118;
   IT = 119;
   JE = 120;
   JM = 121;
   JO = 122;
   JP = 123;
   KE = 124;
   KG = 125;
   KH = 126;
   KI = 127;
   KM = 128;
   KN = 129;
   KP = 130;
   KR = 131;
   KW = 132;
   KY = 133;
   KZ = 134;
   LA = 135;
   LB = 136;
   LC = 137;
   LI = 138;
   LK = 139;
   LR = 140;
   LS = 141;
   LT = 142;
   LU = 143;
   LV = 144;
   LY = 145;
   MA = 146;
   MC = 147;
   MD = 148;
   ME = 149;
   MF = 150;
   MG = 151;
   MH = 152;
   MK = 153;
   ML = 154;
   MM = 155;
   MN = 156;
   MO = 157;
   MP = 158;
   MQ = 159;
   MR = 160;
   MS = 161;
   MT = 162;
   MU = 163;
   MV = 164;
   MW = 165;
   MX = 166;
   MY = 167;
   MZ = 168;
   NA = 169;
   NC = 170;
   NE = 171;
   NF = 172;
   NG = 173;
   NI = 174;
   NL = 175;
   NO = 176;
   NP = 177;
   NR = 178;
   NT = 179;
   NU = 180;
   NZ = 181;
   OM = 182;
   PA = 183;
   PE = 184;
   PF = 185;
   PG = 186;
   PH = 187;
   PK = 188;
   PL = 189;
   PM = 190;
   PN = 191;
   PR = 192;
   PS = 193;
   PT = 194;
   PW = 195;
   PY = 196;
   QA = 197;
   RE = 198;
   RO = 199;
   RS = 200;
   RU = 201;
   RW = 202;
   SA = 203;
   SB = 204;
   SC = 205;
   SD = 206;
   SE = 207;
   SF = 208;
   SG = 209;
   SH = 210;
   SI = 211;
   SJ = 212;
   SK = 213;
   SL = 214;
   SM = 215;
   SN = 216;
   SO = 217;
   SR = 218;
   SS = 219;
   ST = 220;
   SU = 221;
   SV = 222;
   SX = 223;
   SY = 224;
   SZ = 225;
   TA = 226;
   TC = 227;
   TD = 228;
   TF = 229;
   TG = 230;
   TJ = 231;
   TK = 232;
   TL = 233;
   TM = 234;
   TN = 235;
   TO = 236;
   TP = 237;
   TR = 238;
   TT = 239;
   TV = 240;
   TW = 241;
   TZ = 242;
   UA = 243;
   UG = 244;
   UK = 245;
   UM = 246;
   US = 247;
   UY = 248;
   UZ = 249;
   VA = 250;
   VC = 251;
   VE = 252;
   VG = 253;
   VI = 254;
   VN = 255;
   VU = 256;
   WF = 257;
   WS = 258;
   XK = 259;
   YE = 260;
   YT = 261;
   YU = 262;
   ZA = 263;
   ZM = 264;
   ZR = 265;
   ZW = 266;
}
enum Mengeneinheit {
   ZERO = 0; // proto3 requires a zero value as the first item (it can be named anything)
   WH = 2;
   KW = 3;
   ANZAHL = 7;
   KUBIKMETER = 11;
   STUNDE = 13;
   TAG = 17;
   MONAT = 19;
   VAR = 23;
   VARH = 29;
   JAHR = 228;
   KWH = 2000;
   MW = 3000;
   KVAR = 23000;
   KVARH = 29000;
   MWH = 2000000;
}
enum Messwerterfassung {
   FERNAUSLESBAR = 0;
   MANUELL_AUSGELESENE = 1;
}
enum Schwachlastfaehig {
   NICHT_SCHWACHLASTFAEHIG = 0;
   SCHWACHLASTFAEHIG = 1;
}
enum Sparte {
   STROM = 0;
   GAS = 1;
   FERNWAERME = 2;
   NAHWAERME = 3;
   WASSER = 4;
   ABWASSER = 5;
}
enum Tarifart {
   EINTARIF = 0;
   ZWEITARIF = 1;
   MEHRTARIF = 2;
   SMART_METER = 3;
   LEISTUNGSGEMESSEN = 4;
}
enum Unterbrechbarkeit {
   UV = 0;
   NUV = 1;
}
enum Verbrauchsart {
   KL = 0;
   KLW = 1;
   KLWS = 2;
   W = 3;
   WS = 4;
}
enum Verwendungszweck {
   NETZNUTZUNGSABRECHNUNG = 0;
   BILANZKREISABRECHNUNG = 1;
   MEHRMINDERMBENGENABRECHNUNG = 2;
   ENDKUNDENABRECHNUNG = 3;
}
enum Waermenutzung {
   SPEICHERHEIZUNG = 0;
   WAERMEPUMPE = 1;
   DIREKTHEIZUNG = 2;
}
message Zaehler {
   string Zaehlernummer = 4;
   Sparte Sparte = 5;
   Zaehlerauspraegung Zaehlerauspraegung = 6;
   Zaehlertyp Zaehlertyp = 7;
   Tarifart Tarifart = 8;
   .bcl.Decimal Zaehlerkonstante = 9;
   .bcl.DateTime EichungBis = 10;
   .bcl.DateTime LetzteEichung = 11;
   repeated Zaehlwerk Zaehlwerke = 12;
   Geschaeftspartner Zaehlerhersteller = 13;
   string Gateway = 1014;
   Fernschaltung Fernschaltung = 1015;
   Messwerterfassung Messwerterfassung = 1016;
}
enum Zaehlerauspraegung {
   EINRICHTUNGSZAEHLER = 0;
   ZWEIRICHTUNGSZAEHLER = 1;
}
enum Zaehlertyp {
   DREHSTROMZAEHLER = 0;
   BALGENGASZAEHLER = 1;
   DREHKOLBENZAEHLER = 2;
   SMARTMETER = 3;
   LEISTUNGSZAEHLER = 4;
   MAXIMUMZAEHLER = 5;
   TURBINENRADGASZAEHLER = 6;
   ULTRASCHALLGASZAEHLER = 7;
   WECHSELSTROMZAEHLER = 8;
}
message Zaehlwerk {
   string ZaehlwerkId = 3;
   string Bezeichnung = 4;
   Energierichtung Richtung = 5;
   string ObisKennzahl = 6;
   .bcl.Decimal Wandlerfaktor = 7;
   Mengeneinheit Einheit = 8;
   string Kennzahl = 1009;
   Schwachlastfaehig Schwachlastfaehig = 1010;
   repeated Verwendungszweck Verwendungszwecke = 1011 [packed = false];
   Verbrauchsart Verbrauchsart = 1012;
   Unterbrechbarkeit Unterbrechbarkeit = 1013;
   Waermenutzung Waermenutzung = 1014;
   Konzessionsabgabe Konzessionsabgabe = 1015;
   bool Steuerbefreit = 1016;
   int32 Vorkommastelle = 1017;
   int32 Nachkommastelle = 1018;
}
